--- a/styles.css
+++ b/styles.css
@@ -120,10 +120,10 @@ h1, h2 {
     object-fit: cover;
 }
 
-/* TIMELINE STYLES */
+/* TIMELINE STYLES T, L, B, R */
 .timeline {
     position: relative;
-    padding: 20px 0 2px 30px;
+    padding: 12px 0 0px 30px;
 }
 
 .timeline::before {
