--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,8 @@ h1, h2 {
     .main-container {
         width: 90%;
         flex-direction: column; /* Stacks Left Column on top of Right Column */
-        padding-bottom: 30px;
+        padding-left: 4px;
+        padding-bottom: 12px;
     }
 
     /* 2. Reset Left Column (Header area) */
